--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -3,35 +3,35 @@
 # Dockerfile for our Elastic Search cluster.  The dockerfile is based off of
 #  https://github.com/dockerfile/elasticsearch.
 #
-
+FROM elasticsearch:5.2
 # Pull base image.
-FROM ubuntu:16.04
+#FROM ubuntu:16.04
 
-ENV ES_PKG_NAME elasticsearch-1.7.3
+#ENV ES_PKG_NAME elasticsearch-1.7.3
 
-RUN apt-get update
+#RUN apt-get update
 # Install system level packages needed to install elastic search or dependancies.
-RUN apt-get -y install software-properties-common
+#RUN apt-get -y install software-properties-common
 
 # Install Java.
-RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 \
-    select true | debconf-set-selections && \
-    add-apt-repository -y ppa:webupd8team/java && \
-    apt-get update && \
-    apt-get install -y oracle-java8-installer && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm -rf /var/cache/oracle-jdk8-installer
+#RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 \
+#   select true | debconf-set-selections && \
+#    add-apt-repository -y ppa:webupd8team/java && \
+#    apt-get update && \
+#    apt-get install -y oracle-java8-installer && \
+#    rm -rf /var/lib/apt/lists/* && \
+#    rm -rf /var/cache/oracle-jdk8-installer
 
 # Define commonly used JAVA_HOME variable
-ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
+#ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
 
 # Install Elasticsearch.
-RUN \
-    cd / && \
-    wget https://download.elasticsearch.org/elasticsearch/elasticsearch/$ES_PKG_NAME.tar.gz && \
-    tar xvzf $ES_PKG_NAME.tar.gz && \
-    rm -f $ES_PKG_NAME.tar.gz && \
-    mv /$ES_PKG_NAME /elasticsearch
+#RUN \
+ #   cd / && \
+ #   wget https://download.elasticsearch.org/elasticsearch/elasticsearch/$ES_PKG_NAME.tar.gz && \
+ #   tar xvzf $ES_PKG_NAME.tar.gz && \
+ #   rm -f $ES_PKG_NAME.tar.gz && \
+ #   mv /$ES_PKG_NAME /elasticsearch
 
 # Mount elasticsearch.yml config
 ADD config/elasticsearch.yml /elasticsearch/config/elasticsearch.yml
